--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^14.11.2",
     "parcel": "^1.12.4",
     "ts-proto": "^1.34.0",
     "typescript": "^4.0.2"
   },
   "scripts": {
     "start": "parcel index.html",
+    "build": "parcel build index.html",
     "generate": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=. --ts_proto_opt=outputClientImpl=outputClientImpl=grpc-web --proto_path=../proto api.proto"
   },
   "dependencies": {
