--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,6 +23,6 @@ services:
       context: ..
       dockerfile: docker/frontend.Dockerfile
       args:
-        - PROXY=proxy:8080
+        - ENDPOINT=proxy:8080
     ports:
       - "3000:80"
