--- a/backend/package.json
+++ b/backend/package.json
@@ -3,22 +3,30 @@
   "version": "1.0.0",
   "main": "index.ts",
   "devDependencies": {
+    "@types/generic-pool": "^3.1.9",
     "@types/node": "^14.11.2",
+    "@types/pg": "^7.14.5",
     "ts-node": "^9.0.0",
     "ts-proto": "^1.34.0",
     "typescript": "^4.0.2"
   },
   "scripts": {
-    "start": "ts-node index.ts",
+    "start": "ts-node src/index.ts",
     "build": "tsc",
-    "generate": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=. --ts_proto_opt=nestJs=true --proto_path=../proto api.proto"
+    "generate": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./src/generated --ts_proto_opt=nestJs=true --proto_path=../proto api.proto",
+    "pgtyped": "pgtyped -c config.json"
   },
   "dependencies": {
     "@grpc/proto-loader": "^0.5.5",
     "@nestjs/common": "^7.4.4",
     "@nestjs/core": "^7.4.4",
     "@nestjs/microservices": "^7.4.4",
+    "@pgtyped/cli": "^0.8.2",
+    "@pgtyped/query": "^0.8.2",
+    "generic-pool": "^3.7.1",
     "grpc": "^1.24.3",
+    "pg": "^8.4.0",
+    "postgres-migrations": "^5.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.3"
   }
