--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,9 @@
     "typescript": "^4.0.2"
   },
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html",
-    "generate": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=. --ts_proto_opt=outputClientImpl=outputClientImpl=grpc-web --proto_path=../proto api.proto"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html",
+    "generate": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./src/generated --ts_proto_opt=outputClientImpl=outputClientImpl=grpc-web --proto_path=../proto api.proto"
   },
   "dependencies": {
     "@improbable-eng/grpc-web": "^0.13.0",
